// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > Menu.Item > render with active props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2m»"
      aria-describedby="menu-«r2m»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2j»"
      aria-describedby="menu-«r2j»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2a»"
      aria-describedby="menu-«r2a»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2g»"
      aria-describedby="menu-«r2g»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2d»"
      aria-describedby="menu-«r2d»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders bottom 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r21»"
      aria-describedby="menu-«r21»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r24»"
      aria-describedby="menu-«r24»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders right 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r27»"
      aria-describedby="menu-«r27»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders top 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r1u»"
      aria-describedby="menu-«r1u»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders nested 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r1k»"
      aria-describedby="menu-«r1k»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Group 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r7»"
      aria-describedby="menu-«r7»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Group and labelDescription 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«rb»"
      aria-describedby="menu-«rb»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r4»"
      aria-describedby="menu-«r4»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«ri»"
      aria-describedby="menu-«ri»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«rf»"
      aria-describedby="menu-«rf»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r0»"
      aria-describedby="menu-«r0»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with footer 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r1h»"
      aria-describedby="menu-«r1h»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with visible=false 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-«r2»"
      aria-describedby="menu-«r2»"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > should search on simple childs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > should search on simple complex childs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;
